--- a/streamlit_app/pyproject.toml
+++ b/streamlit_app/pyproject.toml
@@ -3,7 +3,7 @@ name = "streamlit-app"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.11.6"
 dependencies = [
     "accelerate>=0.24.0",
     "nltk>=3.8.1",
@@ -13,6 +13,7 @@ dependencies = [
     "pypdf2>=3.0.1",
     "python-docx>=1.1.0",
     "sentencepiece>=0.1.99",
+    "spacy>=3.8.11",
     "streamlit>=1.28.0",
     "torch>=2.0.0",
     "transformers>=4.35.0",
