--- a/streamlit_app/pyproject.toml
+++ b/streamlit_app/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pandas>=2.0.0",
     "pdfplumber>=0.10.3",
     "pillow>=10.0.0",
+    "pypdf>=6.4.1",
     "pypdf2>=3.0.1",
     "python-docx>=1.1.0",
     "sentencepiece>=0.1.99",
