--- a/streamlit_app/pyproject.toml
+++ b/streamlit_app/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11.6"
 dependencies = [
     "accelerate>=0.24.0",
+    "docx2txt>=0.8",
     "nltk>=3.8.1",
     "pandas>=2.0.0",
     "pdfplumber>=0.10.3",
