--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -4,6 +4,7 @@ PyPDF2>=3.0.1
 pypdf>=3.0.0
 pdfplumber>=0.10.3
 python-docx>=1.1.0
+docx2txt>=0.8
 Pillow>=10.0.0
 transformers>=4.35.0
 torch>=2.0.0
