--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -1,7 +1,7 @@
 streamlit>=1.28.0
 nltk>=3.8.1
 PyPDF2>=3.0.1
-pypdf>=3.0.0
+pypdf>=6.4.1
 pdfplumber>=0.10.3
 python-docx>=1.1.0
 docx2txt>=0.8
@@ -11,4 +11,5 @@ torch>=2.0.0
 accelerate>=0.24.0
 sentencepiece>=0.1.99
 pandas>=2.0.0
-spacy>=3.7.0
+spacy>=3.8.11
+watchdog>=6.0.0
