--- a/streamlit_app/pyproject.toml
+++ b/streamlit_app/pyproject.toml
@@ -19,5 +19,6 @@ dependencies = [
     "streamlit>=1.28.0",
     "torch>=2.0.0",
     "transformers>=4.35.0",
+    "bitsandbytes>=0.41.0",
     "watchdog>=6.0.0",
 ]
