--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -1,17 +1,99 @@
-streamlit>=1.28.0
-nltk>=3.8.1
-PyPDF2>=3.0.1
-pypdf>=6.4.1
-pdfplumber>=0.10.3
-python-docx>=1.1.0
-docx2txt>=0.8
-Pillow>=10.0.0
-transformers>=4.35.0
-torch>=2.0.0
-accelerate>=0.24.0
-sentencepiece>=0.1.99
-pandas>=2.0.0
-spacy>=3.8.11
-watchdog>=6.0.0
-python-dotenv>=1.0.0
-bitsandbytes>=0.41.0
+accelerate==1.12.0
+altair==6.0.0
+annotated-types==0.7.0
+attrs==25.4.0
+bitsandbytes==0.49.0
+blinker==1.9.0
+blis==1.3.3
+cachetools==6.2.2
+catalogue==2.0.10
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+cloudpathlib==0.23.0
+confection==0.1.5
+cryptography==46.0.3
+cymem==2.0.13
+dnspython==2.8.0
+docx2txt==0.9
+filelock==3.20.0
+fsspec==2025.12.0
+gitdb==4.0.12
+gitpython==3.1.45
+hf-xet==1.2.0
+huggingface-hub==0.36.0
+idna==3.11
+jinja2==3.1.6
+joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+lxml==6.0.2
+markdown-it-py==4.0.0
+markupsafe==3.0.3
+mdurl==0.1.2
+mpmath==1.3.0
+murmurhash==1.0.15
+narwhals==2.13.0
+networkx==3.6.1
+nltk==3.9.2
+numpy==2.3.5
+packaging==25.0
+pandas==2.3.3
+pdfminer-six==20251107
+pdfplumber==0.11.8
+pillow==12.0.0
+pip==25.3
+preshed==3.0.12
+protobuf==6.33.2
+psutil==7.1.3
+pyarrow==22.0.0
+pycparser==2.23
+pydantic==2.12.5
+pydantic-core==2.41.5
+pydeck==0.9.1
+pygments==2.19.2
+pymongo==4.15.5
+pypdf==6.4.1
+pypdf2==3.0.1
+pypdfium2==5.1.0
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+pytz==2025.2
+pyyaml==6.0.3
+referencing==0.37.0
+regex==2025.11.3
+requests==2.32.5
+rich==14.2.0
+rpds-py==0.30.0
+safetensors==0.7.0
+sentencepiece==0.2.1
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.5.0
+smmap==5.0.2
+spacy==3.8.11
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.2
+streamlit==1.52.1
+sympy==1.14.0
+tenacity==9.1.2
+thinc==8.3.10
+tokenizers==0.22.1
+toml==0.10.2
+torch==2.9.1
+tornado==6.5.2
+tqdm==4.67.1
+transformers==4.57.3
+typer==0.20.0
+typer-slim==0.20.0
+typing-extensions==4.15.0
+typing-inspection==0.4.2
+tzdata==2025.2
+urllib3==2.6.1
+wasabi==1.1.3
+watchdog==6.0.0
+weasel==0.4.3
+wrapt==2.0.1
