--- a/streamlit_app/requirements.txt
+++ b/streamlit_app/requirements.txt
@@ -17,6 +17,7 @@ cryptography==46.0.3
 cymem==2.0.13
 dnspython==2.8.0
 docx2txt==0.9
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 filelock==3.20.0
 fsspec==2025.12.0
 gitdb==4.0.12
@@ -47,6 +48,7 @@ pip==25.3
 preshed==3.0.12
 protobuf==6.33.2
 psutil==7.1.3
+psycopg2-binary==2.9.11
 pyarrow==22.0.0
 pycparser==2.23
 pydantic==2.12.5
@@ -59,6 +61,7 @@ pypdf2==3.0.1
 pypdfium2==5.1.0
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
+python-dotenv==1.2.1
 pytz==2025.2
 pyyaml==6.0.3
 referencing==0.37.0
